...
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <!-- CAMERA -->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_camera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        </LinearLayout>
                    </LinearLayout>

                         <!-- NUMBER OF COLUMNS -->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_n_columns"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        </LinearLayout>
                    </LinearLayout>

                    <!-- EXCLUDED ALBUM-->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_excluded_album"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <!--BASIC THEME-->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_basic_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        </LinearLayout>
                    </LinearLayout>

                    <!--PRIMARY COLOR-->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_primaryColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        </LinearLayout>
                    </LinearLayout>

                    <!--ACCENT COLOR-->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_accentColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        </LinearLayout>
                    </LinearLayout>

                    <!-- APPLY THEME ON 3TH ACT -->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_custom_thirdAct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        </LinearLayout>
                    </LinearLayout>

                    <!-- TRANSLUCENT STATUS BAR-->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_switch_TraslucentStatusBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        </RelativeLayout>
                    </LinearLayout>

                    <!--COLORED NAV BAR-->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_switch_ColoredNavBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <!--MAX BRIGHTNESS-->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_switch_max_luminosity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <!-- MAPS PROVIDER-->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_map_provider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:orientation="horizontal">

...
